build_msg.log
Repairing C64 System Plugin...
Compiling C64 System Plugin...
Compiling Asset Catalog...
/* com.apple.actool.compilation-results */
/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/Build/OpenEmu.app/Contents/PlugIns/Systems/Commodore 64.oesystemplugin/Contents/Resources/Assets.car

/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/SystemPlugins/Commodore 64/OEC64SystemController.m:39:24: error: call to undeclared function 'dlopen'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   39 |         void *handle = dlopen(corePath, RTLD_NOW);
      |                        ^
/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/SystemPlugins/Commodore 64/OEC64SystemController.m:39:24: error: declaration of 'dlopen' must be imported from module 'Darwin.POSIX.dlfcn' before it is required
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/dlfcn.h:75:15: note: declaration here is not visible
   75 | extern void * dlopen(const char * __path, int __mode) __DYLDDL_UNAVAILABLE;
      |               ^
/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/SystemPlugins/Commodore 64/OEC64SystemController.m:39:24: warning: a function declaration without a prototype is deprecated in all versions of C and is treated as a zero-parameter prototype in C23, conflicting with a previous declaration [-Wdeprecated-non-prototype]
   39 |         void *handle = dlopen(corePath, RTLD_NOW);
      |                        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/dlfcn.h:75:15: note: conflicting prototype is here
   75 | extern void * dlopen(const char * __path, int __mode) __DYLDDL_UNAVAILABLE;
      |               ^
/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/SystemPlugins/Commodore 64/OEC64SystemController.m:39:24: error: conflicting types for 'dlopen'
   39 |         void *handle = dlopen(corePath, RTLD_NOW);
      |                        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/dlfcn.h:75:15: note: previous declaration is here
   75 | extern void * dlopen(const char * __path, int __mode) __DYLDDL_UNAVAILABLE;
      |               ^
/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/SystemPlugins/Commodore 64/OEC64SystemController.m:39:41: error: use of undeclared identifier 'RTLD_NOW'
   39 |         void *handle = dlopen(corePath, RTLD_NOW);
      |                                         ^
/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/SystemPlugins/Commodore 64/OEC64SystemController.m:43:69: error: call to undeclared function 'dlerror'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   43 |             fprintf(f, "FAILURE: Could not dlopen VICE core: %s\n", dlerror());
      |                                                                     ^
/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/SystemPlugins/Commodore 64/OEC64SystemController.m:43:69: error: declaration of 'dlerror' must be imported from module 'Darwin.POSIX.dlfcn' before it is required
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/dlfcn.h:74:15: note: declaration here is not visible
   74 | extern char * dlerror(void) __DYLDDL_UNAVAILABLE;
      |               ^
/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/SystemPlugins/Commodore 64/OEC64SystemController.m:43:69: error: conflicting types for 'dlerror'
   43 |             fprintf(f, "FAILURE: Could not dlopen VICE core: %s\n", dlerror());
      |                                                                     ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/dlfcn.h:74:15: note: previous declaration is here
   74 | extern char * dlerror(void) __DYLDDL_UNAVAILABLE;
      |               ^
1 warning and 7 errors generated.
